update food donation module
